--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Foreign"]
 	path = Foreign
 	url = https://github.com/patternshop/legacy-foreign.git
+[submodule "Common"]
+	path = Common
+	url = https://github.com/patternshop/legacy-common.git
