--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+Windows/ForeignDebug/
+Windows/PatternshopCoreDebug/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
