--- a/Windows/French/French.vcxproj
+++ b/Windows/French/French.vcxproj
@@ -60,8 +60,8 @@
     <IntDir>..\French\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
-    <IntDir>$(Configuration)\</IntDir>
+    <OutDir>..\French\$(Configuration)\</OutDir>
+    <IntDir>..\French\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Demo|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
