--- a/Windows/PatternshopCore.vcxproj
+++ b/Windows/PatternshopCore.vcxproj
@@ -63,7 +63,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>..\Common\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectName)$(Configuration)\</IntDir>
+    <IntDir>..\Common\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Demo|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
