--- a/Windows/PatternshopCore.vcxproj
+++ b/Windows/PatternshopCore.vcxproj
@@ -120,7 +120,10 @@
     <ClCompile Include="..\Common\Projects\PsLayer.cpp" />
     <ClCompile Include="..\Common\Projects\PsMatrix.cpp" />
     <ClCompile Include="..\Common\Projects\PsPattern.cpp" />
-    <ClCompile Include="..\Common\Projects\PsProject.cpp" />
+    <ClCompile Include="..\Common\Projects\PsProject1.cpp" />
+    <ClCompile Include="..\Common\Projects\PsProject2.cpp" />
+    <ClCompile Include="..\Common\Projects\PsProject3.cpp" />
+    <ClCompile Include="..\Common\Projects\PsProject4.cpp" />
     <ClCompile Include="..\Common\Projects\PsShape.cpp" />
   </ItemGroup>
   <ItemGroup>
