--- a/Windows/Patternshop.vcxproj
+++ b/Windows/Patternshop.vcxproj
@@ -84,7 +84,7 @@
       <Optimization>Disabled</Optimization>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <AdditionalIncludeDirectories>../Foreign/FreeImage/Source/LibTIFF;../Foreign/FreeImage/Source/ZLib;../Foreign/FreeImage/Source;../Foreign/;../Common/Projects/;../Common/Engine/;../Common/Exporter/;../Common/Dialogs/;../Common/Security/;../Common/;../Windows/Sources;../Windows/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Foreign/FreeImage/Source/LibTIFF;../Foreign/FreeImage/Source/ZLib;../Foreign/FreeImage/Source;../Foreign/;../Common/Projects/;../Common/Engine/;../Common/Exporter/;../Common/Dialogs/;../Common/Security/;../Common/;../Windows/Sources;../Windows/;../Common/Render/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -114,7 +114,7 @@
     <ClCompile>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <AdditionalIncludeDirectories>../Foreign/FreeImage/Source/LibTIFF;../Foreign/FreeImage/Source/ZLib;../Foreign/FreeImage/Source;../Foreign/;../Common/Projects/;../Common/Engine/;../Common/Exporter/;../Common/Dialogs/;../Common/Security/;../Common/;../Windows/Sources;../Windows/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Foreign/FreeImage/Source/LibTIFF;../Foreign/FreeImage/Source/ZLib;../Foreign/FreeImage/Source;../Foreign/;../Common/Projects/;../Common/Engine/;../Common/Exporter/;../Common/Dialogs/;../Common/Security/;../Common/;../Windows/Sources;../Windows/;../Common/Render/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
